tests/baselines/reference/instantiateTypeParameter.errors.txt
==== tests/cases/compiler/instantiateTypeParameter.ts (2 errors) ====
    interface Foo<T> {
        var x: T<>;
            ~
!!! error TS1005: ';' expected.
               ~~~
!!! error TS2125: Type 'T' does not have type parameters.
    }